Styles updates to fix bug when user will type a country name that doesn't exist in Search Panel, When that happend filters were too much far from header Changes are included in App, Footer, Header and WrongPage Also Header has now min and max height permanently assigned

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -2,5 +2,6 @@
 
 .container {
     height: 100vh;
-    display: grid;
+    display: flex;
+    flex-direction: column;
 }
