--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -7,7 +7,7 @@
     padding: 2rem;
     font-weight: 600;
     font-size: 1.6rem;
-    align-self: end;
+    margin-top: auto;
 
     &__link {
 
