--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -6,7 +6,8 @@
     align-items: center;
     background-color: $white;
     box-shadow: 1rem 1rem 4rem rgba($veryDarkBlue, .1);
-    height: 8.5rem;
+    min-height: 8.5rem;
+    max-height: 8.5rem;
 
     &__logo {
         padding: 2rem 3rem;
