--- a/src/style/WrongPage.scss
+++ b/src/style/WrongPage.scss
@@ -1,9 +1,8 @@
 .main {
     &--error {
+        margin-top: auto;
         display: flex;
-        flex-direction: column;
         justify-content: center;
-        align-items: center;
 
         h1 {
             font-size: calc(2.5rem + 2vw);
